# please

./: README.md  pyproject.toml
call/: __init__.py  cli.py  core.py
call/examples/: __init__.py  commands.py  yt_downloader.py
please/: __init__.py  cli.py  core.py
please/examples/: PLEASE_MODULES  commands.py  yt_downloader.py
tests/: test_commands.py  test_commands_support.py
