[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "please-python"
version = "0.1.0"
description = "A small decorator-based Python CLI runner."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
please = "please.cli:main"

[tool.setuptools.packages.find]
include = ["please", "please.*"]
